# api-services/swagger.json
@@ -132,6 +132,42 @@
         }
       }
     },
+    "/product/id/{userid}": {
+      "parameters": [
+        {
+          "name": "user id",
+          "in": "path",
+          "required": true,
+          "description": "User ID of the product that you want to fetch",
+          "type": "number"
+        }
+      ],
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Get Product By ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "user id",
+            "required": true,
+            "description": "Product with user id",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Product"
+            }
+          }
+        }
+      }
+    },
     "/product/{product_name}": {
       "parameters": [
         {
@@ -200,6 +236,52 @@
           }
         }
       }
+    },
+    "/category": {
+      "get": {
+        "tags": [
+          "Category"
+        ],
+        "summary": "Get all Category from the database",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Categories"
+            }
+          }
+        }
+      }
+    },
+    "/auth": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Login into the System",
+        "requestBody": {
+          "description": "Authentication Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Authentication"
+              }
+            }
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -249,12 +331,6 @@
         },
         "product_condition": {
           "type": "number"
-        },
-        "created_date": {
-          "type": "string"
-        },
-        "modified_date": {
-          "type": "string"
         }
       }
     },
@@ -315,6 +391,79 @@
           "additionalProperties": {
             "$ref": "#/definitions/StudentArchive"
           }
+        }
+      }
+    },
+    "Category": {
+      "type": "object",
+      "properties": {
+        "category_id": {
+          "type": "number"
+        },
+        "parent_id": {
+          "type": "number"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "created_date": {
+          "type": "string"
+        },
+        "modified_date": {
+          "type": "string"
+        }
+      }
+    },
+    "Categories": {
+      "type": "object",
+      "properties": {
+        "categories": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/Category"
+          }
+        }
+      }
+    },
+    "Image": {
+      "type": "object",
+      "properties": {
+        "image_id": {
+          "type": "number"
+        },
+        "image": {
+          "type": "number"
+        },
+        "url": {
+          "type": "string"
+        },
+        "primary_image_id": {
+          "type": "number"
+        }
+      }
+    },
+    "Images": {
+      "type": "object",
+      "properties": {
+        "images": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/Image"
+          }
+        }
+      }
+    },
+    "Authentication": {
+      "type": "object",
+      "properties": {
+        "matrikel_number": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
         }
       }
     }
